template.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "metadata": {
                "description": "Deployment location"
            },
            "defaultValue": "[resourceGroup().location]"
        },
        "cloudGuardVersion": {
            "type": "string",
            "allowedValues": [
                "R80.10 - Bring Your Own License",
                "R80.10 - Pay As You Go (MGMT25)",
                "R80.20 - Bring Your Own License",
                "R80.20 - Pay As You Go (MGMT25)",
                "R80.30 - Bring Your Own License",
                "R80.30 - Pay As You Go (MGMT25)"
            ],
            "defaultValue": "R80.30 - Bring Your Own License",
            "metadata": {
                "description": "Version of Check Point vSEC"
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Administrator password"
            },
            "defaultValue": ""
        },
        "authenticationType": {
            "type": "string",
            "allowedValues": [
                "password",
                "sshPublicKey"
            ],
            "defaultValue": "password",
            "metadata": {
                "description": "Authentication type"
            }
        },
        "sshPublicKey": {
            "type": "string",
            "defaultValue": "",
            "metadata": {
                "description": "Administrator SSH public key"
            }
        },
        "vmName": {
            "type": "string",
            "metadata": {
                "description": "Name of the Check Point Security Gateway"
            }
        },
        "vmSize": {
            "type": "string",
            "defaultValue": "Standard_D3_v2",
            "metadata": {
                "description": "Size of the VM"
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "metadata": {
                "description": "The name of the virtual network"
            },
            "defaultValue": "vnet"
        },
        "virtualNetworkAddressPrefix": {
            "type": "string",
            "metadata": {
                "description": "The address prefix of the virtual network"
            },
            "defaultValue": "10.0.0.0/16"
        },
        "Subnet1Name": {
            "type": "string",
            "metadata": {
                "description": "The name of the 1st subnet"
            },
            "defaultValue": "Frontend"
        },
        "Subnet1Prefix": {
            "type": "string",
            "metadata": {
                "description": "The address prefix of the 1st subnet"
            },
            "defaultValue": "10.0.1.0/24"
        },
        "Subnet1StartAddress": {
            "type": "string",
            "metadata": {
                "description": "The first available address on the 1st subnet"
            },
            "defaultValue": "10.0.1.10"
        },
        "vnetNewOrExisting": {
            "type": "string",
            "defaultValue": "new",
            "allowedValues": [
                "new",
                "existing"
            ],
            "metadata": {
                "Description": "Indicates whether the virtual network is new or existing"
            }
        },
        "virtualNetworkExistingRGName": {
            "type": "string",
            "metadata": {
                "description": "Resource Group of the existing virtual network"
            },
            "defaultValue": ""
        },
        "managementGUIClientNetwork": {
            "type": "string",
            "metadata": {
                "description": "Allowed GUI clients"
            },
            "defaultValue": "0.0.0.0/0"
        },
        "installationType": {
            "type": "string",
            "metadata": {
                "description": "Installation Type"
            },
            "defaultValue": "management",
            "allowedValues": [
                "management",
                "custom"
            ]
        },
        "bootstrapScript": {
            "type": "string",
            "metadata": {
                "description": "Bootstrap script"
            },
            "defaultValue": ""
        },
        "allowDownloadFromUploadToCheckPoint": {
            "type": "string",
            "allowedValues": [
                "true",
                "false"
            ],
            "defaultValue": "true",
            "metadata": {
                "description": "Automatically download Blade Contracts and other important data. Improve product experience by sending data to Check Point"
            }
        },
        "additionalDiskSizeGB": {
            "type": "int",
            "defaultValue": 0,
            "metadata": {
                "description": "Amount of additional disk space (in GB)"
            },
            "minValue": 0,
            "maxValue": 3995
        },
        "diskType": {
            "type": "string",
            "defaultValue": "Standard_LRS",
            "metadata": {
                "description": "The type of the OS disk. Premium is applicable only to DS machine sizes"
            },
            "allowedValues": [
                "Standard_LRS",
                "Premium_LRS"
            ]
        },
        "preview": {
            "type": "string",
            "defaultValue": "",
            "metadata": {
                "description": "Deploy the staged image"
            },
            "allowedValues": [
                "",
                "-preview"
            ]
        },
        "msi": {
            "type": "bool",
            "defaultValue": false,
            "metadata": {
                "description": "Configure managed service identity for the VM"
            }
        },
        "sourceImageVhdUri": {
            "type": "string",
            "defaultValue": "noCustomUri",
            "metadata": {
                "description": "The URI of the blob containing the development image"
            }
        },
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The base URI where artifacts required by this template are located including a trailing '/'"
            },
            "defaultValue": "[deployment().properties.templateLink.uri]"
        },
        "_artifactsLocationSasToken": {
            "type": "securestring",
            "metadata": {
                "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated. Use the defaultValue if the staging location is not secured."
            },
            "defaultValue": ""
        },
        "Check_PointTags": {
            "type": "object",
            "defaultValue": {
                "provider": "30DE18BC-F9F6-4F22-9D30-54B8E74CFD5F"
            }
        }
    },
    "variables": {
        "templateName": "management",
        "templateVersion": "20190805",
        "location": "[parameters('location')]",
        "offers": {
            "R80.10 - Bring Your Own License": "BYOL",
            "R80.10 - Pay As You Go (MGMT25)": "MGMT25",
            "R80.20 - Bring Your Own License": "BYOL",
            "R80.20 - Pay As You Go (MGMT25)": "MGMT25",
            "R80.30 - Bring Your Own License": "BYOL",
            "R80.30 - Pay As You Go (MGMT25)": "MGMT25"
        },
        "offer": "[variables('offers')[parameters('cloudGuardVersion')]]",
        "osVersions": {
            "R80.10 - Bring Your Own License": "R8010",
            "R80.10 - Pay As You Go (MGMT25)": "R8010",
            "R80.20 - Bring Your Own License": "R8020",
            "R80.20 - Pay As You Go (MGMT25)": "R8020",
            "R80.30 - Bring Your Own License": "R8030",
            "R80.30 - Pay As You Go (MGMT25)": "R8030"
        },
        "osVersion": "[variables('osVersions')[parameters('cloudGuardVersion')]]",
        "isBlink": "[bool('false')]",
        "computeApiVersion": "2017-03-30",
        "storageApiVersion": "2016-01-01",
        "networkApiVersion": "2016-06-01",
        "deploymentsApiVersion": "2016-02-01",
        "storageAccountName": "[concat('bootdiag', uniqueString(resourceGroup().id, deployment().name))]",
        "storageAccountType": "Standard_LRS",
        "diskSizeGBR8010": 100,
        "diskSizeGBR8020": 100,
        "diskSizeGBR8030": 100,
        "diskSizeGB": "[add(parameters('additionalDiskSizeGB'), variables(concat('diskSizeGB', variables('osVersion'))))]",
        "customData": "[concat('#!/usr/bin/python /etc/cloud_config.py\n', '\n', 'installationType=\"', parameters('installationType'), '\"', '\n', 'allowUploadDownload=\"', variables('allowUploadDownload'), '\"', '\n', 'osVersion=\"', variables('osVersion'), '\"', '\n', 'templateName=\"', variables('templateName'), '\"', '\n', 'isBlink=\"', variables('isBlink'), '\"', '\n', 'templateVersion=\"', variables('templateVersion'), '\"', '\n', 'bootstrapScript64=\"', variables('bootstrapScript64'), '\ [...]
        "imageOfferR8010": "check-point-vsec-r80",
        "imageOfferR8020": "check-point-cg-r8020-blink-v2",
        "imageOfferR8030": "check-point-cg-r8030",
        "imageOffer": "[concat(variables(concat('imageOffer', variables('osVersion'))), parameters('preview'))]",
        "imagePublisher": "checkpoint",
        "imageReferenceBYOL": {
            "offer": "[variables('imageOffer')]",
            "publisher": "[variables('imagePublisher')]",
            "sku": "[concat(if(equals(variables('osVersion'), 'R8010'), 'sg', 'mgmt'),'-byol')]",
            "version": "latest"
        },
        "imageReferenceMGMT25": {
            "offer": "[variables('imageOffer')]",
            "publisher": "[variables('imagePublisher')]",
            "sku": "mgmt-25",
            "version": "latest"
        },
        "imageReferenceMarketplace": "[variables(concat('imageReference', variables('offer')))]",
        "customImage": "customImage",
        "imageReferenceCustomUri": {
            "id": "[resourceId('Microsoft.Compute/images/', variables('customImage'))]"
        },
        "imageReference": "[if(equals(parameters('sourceImageVhdUri'),'noCustomUri'), variables('imageReferenceMarketplace'), variables('imageReferenceCustomUri'))]",
        "nic1Name": "[concat(parameters('vmName'), '-eth0')]",
        "linuxConfigurationpassword": {},
        "linuxConfigurationsshPublicKey": {
            "disablePasswordAuthentication": "true",
            "ssh": {
                "publicKeys": [
                    {
                        "keyData": "[parameters('sshPublicKey')]",
                        "path": "/home/notused/.ssh/authorized_keys"
                    }
                ]
            }
        },
        "linuxConfiguration": "[variables(concat('linuxConfiguration',parameters('authenticationType')))]",
        "planBYOL": {
            "name": "[concat(if(equals(variables('osVersion'), 'R8010'), 'sg', 'mgmt'),'-byol')]",
            "product": "[variables('imageOffer')]",
            "publisher": "[variables('imagePublisher')]"
        },
        "planMGMT25": {
            "name": "mgmt-25",
            "product": "[variables('imageOffer')]",
            "publisher": "[variables('imagePublisher')]"
        },
        "plan": "[variables(concat('plan', variables('offer')))]",
        "identity": "[if(parameters('msi'), json('{\"type\": \"SystemAssigned\"}'), json('null'))]",
        "publicIPAddressName": "[parameters('vmName')]",
        "publicIPAddressId": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
        "nsgName": "[concat(parameters('vmName'), '-nsg')]",
        "nsgId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
        "bootstrapScript64": "[base64(parameters('bootstrapScript'))]",
        "allowUploadDownload": "[parameters('allowDownloadFromUploadToCheckPoint')]",
        "networkSetupURL": "[uri(parameters('_artifactsLocation'), concat('nestedtemplates/vnet-1-subnet-', parameters('vnetNewOrExisting'), '.json', parameters('_artifactsLocationSasToken')))]",
        "sicKey": "notused",
        "managementGUIClientNetwork": "[parameters('managementGUIClientNetwork')]"
    },
    "resources": [
        {
            "apiVersion": "2018-02-01",
            "name": "pid-cad9cfed-843e-554d-a348-a42352708fab",
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": []
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[variables('storageAccountName')]",
            "apiVersion": "[variables('storageApiVersion')]",
            "location": "[variables('location')]",
            "sku": {
                "name": "[variables('storageAccountType')]"
            },
            "kind": "Storage",
            "tags": {
                "provider": "[toUpper(parameters('Check_PointTags').provider)]"
            }
        },
        {
            "name": "networkSetup",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "[variables('deploymentsApiVersion')]",
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[variables('networkSetupURL')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "location": {
                        "value": "[variables('location')]"
                    },
                    "apiVersion": {
                        "value": "[variables('networkApiVersion')]"
                    },
                    "virtualNetworkName": {
                        "value": "[parameters('virtualNetworkName')]"
                    },
                    "virtualNetworkAddressPrefix": {
                        "value": "[parameters('virtualNetworkAddressPrefix')]"
                    },
                    "Subnet1Name": {
                        "value": "[parameters('Subnet1Name')]"
                    },
                    "Subnet1Prefix": {
                        "value": "[parameters('Subnet1Prefix')]"
                    },
                    "vnetNewOrExisting": {
                        "value": "[parameters('vnetNewOrExisting')]"
                    },
                    "virtualNetworkExistingRGName": {
                        "value": "[parameters('virtualNetworkExistingRGName')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "[variables('networkApiVersion')]",
            "location": "[variables('location')]",
            "name": "[variables('publicIPAddressName')]",
            "properties": {
                "idleTimeoutInMinutes": 30,
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[concat(toLower(parameters('vmName')), '-', uniquestring(resourceGroup().id, deployment().name))]"
                }
            },
            "tags": {
                "provider": "[toUpper(parameters('Check_PointTags').provider)]"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('networkApiVersion')]",
            "location": "[variables('location')]",
            "name": "[variables('nsgName')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "description": "Allow inbound SSH connection",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "100",
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "GAiA-portal",
                        "properties": {
                            "description": "Allow inbound HTTPS access to the GAiA portal",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "110",
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SmartConsole-1",
                        "properties": {
                            "description": "Allow inbound access using the SmartConsole GUI client",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "18190",
                            "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "120",
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SmartConsole-2",
                        "properties": {
                            "description": "Allow inbound access using the SmartConsole GUI client",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "19009",
                            "sourceAddressPrefix": "[variables('managementGUIClientNetwork')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "130",
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Logs",
                        "properties": {
                            "description": "Allow inbound logging connections from managed gateways",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "257",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "140",
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ICA-pull",
                        "properties": {
                            "description": "Allow security gateways to pull a SIC certificate",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "18210",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "150",
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "CRL-fetch",
                        "properties": {
                            "description": "Allow security gateways to fetch CRLs",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "18264",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "160",
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Policy-fetch",
                        "properties": {
                            "description": "Allow security gateways to fetch policy",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "18191",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": "170",
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "tags": {
                "provider": "[toUpper(parameters('Check_PointTags').provider)]"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[variables('networkApiVersion')]",
            "dependsOn": [
                "[resourceId('Microsoft.Resources/deployments', 'networkSetup')]",
                "[variables('nsgId')]",
                "[variables('publicIPAddressId')]"
            ],
            "location": "[variables('location')]",
            "name": "[variables('nic1Name')]",
            "properties": {
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[variables('nsgId')]"
                },
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[parameters('Subnet1StartAddress')]",
                            "privateIPAllocationMethod": "Static",
                            "PublicIpAddress": {
                                "Id": "[variables('publicIPAddressId')]"
                            },
                            "subnet": {
                                "id": "[concat(reference('networkSetup').outputs.vnetId.value, '/subnets/', parameters('Subnet1Name'))]"
                            }
                        }
                    }
                ]
            },
            "tags": {
                "provider": "[toUpper(parameters('Check_PointTags').provider)]"
            }
        },
        {
            "condition": "[not(equals(parameters('sourceImageVhdUri'), 'noCustomUri'))]",
            "type": "Microsoft.Compute/images",
            "apiVersion": "2017-12-01",
            "name": "[variables('customImage')]",
            "location": "[variables('location')]",
            "properties": {
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "osState": "Generalized",
                        "blobUri": "[parameters('sourceImageVhdUri')]",
                        "storageAccountType": "Standard_LRS"
                    }
                }
            },
            "tags": {
                "provider": "[toUpper(parameters('Check_PointTags').provider)]"
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[variables('computeApiVersion')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1Name'))]",
                "[resourceId('Microsoft.Compute/images/', variables('customImage'))]"
            ],
            "location": "[variables('location')]",
            "name": "[parameters('vmName')]",
            "plan": "[if(equals(parameters('sourceImageVhdUri'),'noCustomUri'), variables('plan'), json('null'))]",
            "identity": "[variables('identity')]",
            "properties": {
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName')), variables('storageApiVersion')).primaryEndpoints.blob]"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1Name'))]",
                            "properties": {
                                "primary": true
                            }
                        }
                    ]
                },
                "osProfile": {
                    "adminPassword": "[parameters('adminPassword')]",
                    "adminUsername": "notused",
                    "computerName": "[toLower(parameters('vmName'))]",
                    "customData": "[base64(variables('customData'))]",
                    "linuxConfiguration": "[variables('linuxConfiguration')]"
                },
                "storageProfile": {
                    "imageReference": "[variables('imageReference')]",
                    "osDisk": {
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "diskSizeGB": "[variables('diskSizeGB')]",
                        "name": "[parameters('vmName')]",
                        "managedDisk": {
                            "storageAccountType": "[parameters('diskType')]"
                        }
                    }
                }
            },
            "tags": {
                "provider": "[toUpper(parameters('Check_PointTags').provider)]"
            }
        }
    ],
    "outputs": {
        "IPAddress": {
            "type": "string",
            "value": "[reference(variables('publicIPAddressId')).IpAddress]"
        },
        "FQDN": {
            "type": "string",
            "value": "[reference(variables('publicIPAddressId')).dnsSettings.fqdn]"
        }
    }
}
